sources = files(
	'configs/Constants.vala',
	'configs/Properties.vala',
	
	

	'enums/ColumnEnum.vala',
	'enums/TypeItemEnum.vala',


	'services/Settings.vala',

	'utils/TimeUtil.vala',
	'utils/WidgetUtil.vala',
	
	'views/ApplicationView.vala',

	'widgets/HeaderBar.vala',
	'widgets/ApplicationWindow.vala',

	'objects/ItemConversion.vala',

	'Application.vala',
	'Main.vala'
)